--- a/html_workspace/MayProject/Calendar.html
+++ b/html_workspace/MayProject/Calendar.html
@@ -10,22 +10,19 @@
   @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
   
   /*#2 */
-  * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-  }
- 
+    
   body {
     min-height: 100vh;
     max-width: 700px;
-    margin: 40px auto;
+    margin: auto;
     padding: 20px;
     background: #fffcf0;
     color: #333;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
   }
-/* 
+  
+  /* 
   body {
     display: flex;
     flex-direction: row;
@@ -52,7 +49,7 @@
     justify-content: center;
     align-items: center;
 
-    width: 450px;
+    width: 100%;
     background: #fff;
     border: 1px solid lightgray;
     border-radius: 30px;
@@ -62,6 +59,7 @@
   
   h1 {
     margin-bottom: 15px;
+    text-align: center;
   }
   
   /*#5 */
@@ -96,6 +94,7 @@
     list-style: none;
     flex-wrap: wrap;
     text-align: center;
+    padding-right: 20px;
   }
   .calendar .weeks li {
     font-weight: 500;
