--- a/html_workspace/MayProject/Sidebar.html
+++ b/html_workspace/MayProject/Sidebar.html
@@ -1,5 +1,5 @@
 <!-- sidebar.html -->
-<div class="side-nav">
+<!-- <div class="side-nav">
   <div class="side-nav-left"> 
     <a href="#" class="top-menu">📚</a>
     <div class="sub-menu" >
@@ -11,4 +11,26 @@
       </ul>
     </div>
   </div>
-</div>
+</div> -->
+
+<nav class="side-nav">
+  <div class="menu-btn">
+    <div class="line line--1"></div>
+    <div class="line line--2"></div>
+    <div class="line line--3"></div>
+  </div>
+
+  <div class="side-nav-left">
+    <ul class="sub-menu-list">
+        <li><a href="./Calendar.html"><span class = "title">Calendar</span></a></li>
+        <li><a href="../js/day0519/Diary/index.html"><span class="title">Cal</span></a></li>
+        <li><a href="./index.html"><span class="title">Feeling</span></a></li>
+        <li><a href="#"><span class="title">SALE</span></a></li>
+    </ul>
+  </div>
+</nav>
+
+<!-- <div class="support">
+  <a href="https://twitter.com/DevLoop01" target="_blank"><i class="fab fa-twitter-square"></i></a>
+  <a href="https://codepen.io/dev_loop/" target="_blank"><i class="fab fa-codepen"></i></a>
+</div> -->
