--- a/html_workspace/MayProject/index.html
+++ b/html_workspace/MayProject/index.html
@@ -7,9 +7,12 @@
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="sidebar.css" />
 </head>
+<!-- <script type="module" src="main.js"></script> -->
+<script src="main.js"></script>
 <body>
+    <nav id="sidebar-container"></nav>
     <div id="header">
-        <div id="sidebar-container"></div>
+        <!-- <div id="sidebar-container"></div> -->
 
 
         <h1>🌈 감정 다이어리 & 🎯 다짐 캡슐</h1>
@@ -60,6 +63,6 @@
         </div>
     </div>
 
-    <script type="module" src="main.js"></script>
+    <!-- <script type="module" src="main.js"></script> -->
 </body>
 </html>
