--- a/html_workspace/MayProject/Sidebar.html
+++ b/html_workspace/MayProject/Sidebar.html
@@ -1,18 +1,3 @@
-<!-- sidebar.html -->
-<!-- <div class="side-nav">
-  <div class="side-nav-left"> 
-    <a href="#" class="top-menu">📚</a>
-    <div class="sub-menu" >
-      <ul class="sub-menu-list">
-        <li><a href="./Calendar.html"><span class = "title">Calendar</span></a></li>
-        <li><a href="../js/day0519/Diary/index.html"><span class="title">Cal</span></a></li>
-        <li><a href="./index.html"><span class="title">Feeling</span></a></li>
-        <li><a href="#"><span class="title">SALE</span></a></li>
-      </ul>
-    </div>
-  </div>
-</div> -->
-
 <nav class="side-nav">
   <div class="menu-btn">
     <div class="line line--1"></div>
@@ -22,10 +7,10 @@
 
   <div class="side-nav-left">
     <ul class="sub-menu-list">
+        <li><a href="./index.html"><span class="title">Emotion</span></a></li>
         <li><a href="./Calendar.html"><span class = "title">Calendar</span></a></li>
-        <li><a href="../js/day0519/Diary/index.html"><span class="title">Cal</span></a></li>
-        <li><a href="./index.html"><span class="title">Feeling</span></a></li>
-        <li><a href="#"><span class="title">SALE</span></a></li>
+        <li><a href="#"><span class="title">Cal</span></a></li>
+        <li><a href="#"><span class="title">Game</span></a></li>
     </ul>
   </div>
 </nav>
