--- a/html_workspace/MayProject/index.html
+++ b/html_workspace/MayProject/index.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>🌈감정 다이어리</title>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="sidebar.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>🌈감정 다이어리</title>
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/sidebar.css" />
 </head>
 <!-- <script type="module" src="main.js"></script> -->
-<script src="main.js"></script>
+<script src="./js/main.js"></script>
 <body>
     <nav id="sidebar-container"></nav>
     <div id="header">
-        <!-- <div id="sidebar-container"></div> -->
-
-
         <h1>🌈 감정 다이어리 & 🎯 다짐 캡슐</h1>
     </div>
     <div id="content">
@@ -62,7 +59,5 @@
             <button id="btn_clear" onclick="deleteDiary()">데이터 삭제</button>
         </div>
     </div>
-
-    <!-- <script type="module" src="main.js"></script> -->
 </body>
 </html>
