--- a/html_workspace/MayProject/Sidebar.html
+++ b/html_workspace/MayProject/Sidebar.html
@@ -1,18 +1,17 @@
 <nav class="side-nav">
-  <div class="menu-btn">
-    <div class="line line--1"></div>
-    <div class="line line--2"></div>
-    <div class="line line--3"></div>
-  </div>
+    <div class="menu-btn">
+        <div class="line line--1"></div>
+        <div class="line line--2"></div>
+        <div class="line line--3"></div>
+    </div>
 
-  <div class="side-nav-left">
-    <ul class="sub-menu-list">
-        <li><a href="./index.html"><span class="title">Emotion</span></a></li>
-        <li><a href="./Calendar.html"><span class = "title">Calendar</span></a></li>
-        <li><a href="#"><span class="title">Cal</span></a></li>
-        <li><a href="#"><span class="title">Game</span></a></li>
-    </ul>
-  </div>
+    <div class="side-nav-left">
+        <ul class="sub-menu-list">
+            <li><a href="./index.html"><span class="title">Emotion</span></a></li>
+            <li><a href="./Calendar.html"><span class = "title">Calendar</span></a></li>
+            <li><a href="./Game.html"><span class="title">Game</span></a></li>
+        </ul>
+    </div>
 </nav>
 
 <!-- <div class="support">
