--- a/html_workspace/MayProject/Calendar.html
+++ b/html_workspace/MayProject/Calendar.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8" />
-    <title>감정 일기</title>
+    <title>📅 감정 일기</title>
     <link rel="stylesheet" href="./css/cal.css" />
     <link rel="stylesheet" href="./css/sidebar.css" />
 </head>
@@ -24,7 +24,6 @@
 
     <div id="header">
         <h1>📆 Calendar 📅</h1>
-        <h3 style="color: red;">다짐 있는 날 표시 하기, 게임 만들기, 다짐 표시 스타일 지정</h3>
     </div>
 
     <div class="wrapper">
