--- a/html_workspace/MayProject/index.html
+++ b/html_workspace/MayProject/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/sidebar.css" />
 </head>
 <script src="./js/main.js"></script>
+<script src="./js/Side.js"></script>
 <body>
     <nav id="sidebar-container"></nav>
     <div id="header">
